EDA path changing

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4140,7 +4140,7 @@
    "source": [
     "def get_data(tag, \n",
     "            path='data/train.csv', \n",
-    "            repo ='Rossmann_Pharmaceutical_sales_Prediction'\n",
+    "            repo = 'C:/Users/Ekubay/Documents/Rossmann_Pharmaceutical_sales_Prediction'\n",
     "):\n",
     "    rev = tag\n",
     "    data_url = dvc.api.get_url(path=path, repo=repo, rev=rev)\n",
@@ -4774,7 +4774,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
