--- a/mlflow_predi_store_sales.ipynb
+++ b/mlflow_predi_store_sales.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b3e305fb",
+   "id": "8a9b8e66",
    "metadata": {},
    "source": [
     "# Working with mlflow and prediction"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "id": "402ffb91",
    "metadata": {},
    "outputs": [],
@@ -26,34 +26,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 21,
+   "id": "6677c610",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.naive_bayes import BernoulliNB, GaussianNB\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "# To evaluate end result we have\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "from sklearn.model_selection import LeaveOneOut\n",
+    "from sklearn.model_selection import cross_val_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5beb5263",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "755291ae",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022/09/08 11:57:51 INFO mlflow.tracking.fluent: Experiment with name 'prediction' does not exist. Creating a new experiment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import sys\n",
-    "import os\n",
-    "#from ensurepip import version\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.metrics import mean_squared_error , mean_absolute_error , r2_score\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import ElasticNet\n",
-    "from urllib.parse import urlparse\n",
-    "import mlflow\n",
-    "#import mlflow.sklearn\n",
-    "import logging\n",
-    "import warnings\n",
     "\n",
     "# \n",
     "sys.path.append(os.path.abspath(os.path.join('..')))\n",
@@ -82,39 +98,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 26,
+   "id": "da282882",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train model\n",
+    "def train_model(X, Y, model_type='LinearRegression'):\n",
+    "    model = LinearRegression()\n",
+    "    \n",
+    "    if(model_type == 'RandomForest'):\n",
+    "        model = RandomForestRegressor(n_estimators = 100, max_depth=5, random_state=0)\n",
+    "    \n",
+    "        \n",
+    "    kf = KFold(n_splits=5)\n",
+    "    for train_index, test_index in kf.split(X):\n",
+    "        with mlflow.start_run(run_name=model_type, nested = True):\n",
+    "            X_train, X_test = X[train_index], X[test_index]\n",
+    "            y_train, y_test = Y[train_index], Y[test_index]\n",
+    "\n",
+    "            model.fit(X_train, y_train)\n",
+    "            score = model.score(X_test, y_test)\n",
+    "            print(f\"Prediction Score of the {model_type} is {round(score * 100, 2)}%\")\n",
+    "            \n",
+    "            if(model_type == 'LinearRegression'):\n",
+    "                mlflow.log_param('LR-Score', score)\n",
+    "                \n",
+    "            if(model_type == 'RandomForest'):\n",
+    "                mlflow.log_param('RF-Score', score)\n",
+    "                \n",
+    "            mlflow.sklearn.log_model(model, model_type +' Model')\n",
+    "            mlflow.end_run()\n",
+    "            \n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "c39632a2",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1000 entries, 332285 to 708709\n",
-      "Data columns (total 13 columns):\n",
-      " #   Column               Non-Null Count  Dtype  \n",
-      "---  ------               --------------  -----  \n",
-      " 0   Store                1000 non-null   int64  \n",
-      " 1   DayOfWeek            1000 non-null   int64  \n",
-      " 2   Open                 1000 non-null   int64  \n",
-      " 3   Promo                1000 non-null   int64  \n",
-      " 4   SchoolHoliday        1000 non-null   int64  \n",
-      " 5   Day                  1000 non-null   int64  \n",
-      " 6   WeekOfYear           1000 non-null   int64  \n",
-      " 7   Month                1000 non-null   int64  \n",
-      " 8   Year                 1000 non-null   int64  \n",
-      " 9   StoreType            1000 non-null   int32  \n",
-      " 10  Assortment           1000 non-null   int32  \n",
-      " 11  CompetitionDistance  1000 non-null   float64\n",
-      " 12  Promo2               1000 non-null   int64  \n",
-      "dtypes: float64(1), int32(2), int64(10)\n",
-      "memory usage: 101.6 KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# main \n",
     "if __name__ == \"__main__\":\n",
@@ -141,34 +167,36 @@
     "sample_size = 1000\n",
     "sampled_df = df_train[columns].sample(sample_size)\n",
     "\n",
+    "## Separet Test and train files\n",
+    "train_x = sampled_df[feature_columns]\n",
+    "train_y = sampled_df[['Sales']]\n",
+    "#train_x.head()\n",
+    "\n",
     "#\n",
     "lb = LabelEncoder()\n",
     "train_x['StoreType'] = lb.fit_transform(train_x['StoreType'])\n",
     "train_x['Assortment'] = lb.fit_transform(train_x['Assortment'])\n",
     "\n",
-    "train_x.info()\n",
+    "#train_x.info()\n",
     "# scaling\n",
     "x_scaler = MinMaxScaler()\n",
     "y_scaler = MinMaxScaler()\n",
     "\n",
+    "\n",
+    "#X = x_scaler.fit_transform(train_x)\n",
+    "X = train_x\n",
+    "Y = y_scaler.fit_transform(train_y)\n",
+    "\n",
     "# split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.2)\n",
     "\n",
-    "# X = x_scaler.fit_transform(train_x)\n",
-    "X = train_x\n",
-    "Y = y_scaler.fit_transform(train_y)\n",
-    "## Separet Test and train files\n",
-    "train_x = sampled_df[feature_columns]\n",
-    "train_y = sampled_df[['Sales']]\n",
-    "train_x.head()\n",
-    "\n",
     "# training\n",
-    "rf_reg = RandomForestRegressor(n_estimators = 100, max_depth=25, random_state=0)\n",
+    "#rf_reg = RandomForestClassifier(n_estimators = 100, max_depth=25, random_state=0)\n",
     "rf_reg.fit(X_train, y_train)\n",
     "\n",
     "# score of the model\n",
     "score = rf_reg.score(X_test, y_test)\n",
-    "#print(f\"Prediction Score of the Model is {round(score * 100, 2)}%\"\n",
+    "print(f\"Prediction Score of the Model is {round(score * 100, 2)}%\")\n",
     "\n",
     "#\n",
     "cols_x = pd.DataFrame (list(train_x.columns))\n",
@@ -193,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dafa6d53",
+   "id": "3fdaac87",
    "metadata": {},
    "source": [
     "### Runing the mlflow from notebook"
@@ -211,16 +239,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "c2deed7f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#print(f\"Prediction Score of the Model is {round(score * 100, 2)}%\")\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69f620d1",
+   "id": "e1a8b5d4",
    "metadata": {},
    "outputs": [],
    "source": []
