--- a/notebooks/predi_store_sales.ipynb
+++ b/notebooks/predi_store_sales.ipynb
@@ -1778,7 +1778,7 @@
    "id": "17338754",
    "metadata": {},
    "source": [
-    "## summaary of the post analysis\n",
+    "## summary of the post analysis\n",
     "- some features are extremly important\n",
     "- open is the most important feature \n",
     "- the promo has also great impact on the modeling \n",
@@ -1862,7 +1862,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
